// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS/Toggle CustomisedSliderColor smoke-test 1`] = `
<label class="ui-toggle">
  <input type="checkbox">
  <span class="ui-toggle-slider bg-neutral-800">
  </span>
</label>
`;

exports[`CSS/Toggle Default smoke-test 1`] = `
<label class="ui-toggle">
  <input type="checkbox">
  <span class="ui-toggle-slider">
  </span>
</label>
`;

exports[`CSS/Toggle Disabled smoke-test 1`] = `
<label class="ui-toggle">
  <input type="checkbox"
         disabled
  >
  <span class="ui-toggle-slider">
  </span>
</label>
`;

exports[`CSS/Toggle Toggled smoke-test 1`] = `
<label class="ui-toggle">
  <input type="checkbox"
         checked
  >
  <span class="ui-toggle-slider">
  </span>
</label>
`;
